--- a/history.html
+++ b/history.html
@@ -17,8 +17,11 @@
 
 <body class="tc-history" id="css-tc-body">
 
+	<div class="intrologo" id="tc-intrologo">
+		<img src="theairwaves.jpg" alt="The Airwaves">
+	</div>
 
-	<section class="intro" id="tc-intro" role="banner">
+ 	<section class="intro" id="tc-intro" role="banner">
 		<header>
     		<h1>The Airwaves</h1>
 	    	<h2>playing anything and everything</h2>
