Redesign around flyer
Needs further tiding up.

--- a/contact.html
+++ b/contact.html
@@ -14,7 +14,7 @@
 
 </head>
 
-<body class="tc-tracklist" id="css-tc-body">
+<body class="tc-contact" id="css-tc-body">
 
 	<div class="intrologo" id="tc-intrologo">
 		<img src="TheAirwavesLogoTopBanner.jpg" alt="The Airwaves">
@@ -36,27 +36,9 @@
 			</div>
 			<br/>
 			<br/>
-	                <div id="tc-infotext4" role="article">
-		                <h3>Video and Audio Gallery</h3>
-
-                        <a id="video1" href="#">Video1</a>
-                        <a id="nojsvideo1" href="http://www.youtube.com/watch?v=54wezNzaH_k">Viva La Vida, by Coldplay, recorded live at the Swiss Cottage</a>
-                        <br />
-                        <br />
-
-	                </div>
 			<br/>
 			<p>
-   	                <div id="tc-infotext1" role="article">
-		                <h3>Track list</h3>
-		                <p>
-                        This is a list of the songs that we could play at any point. Wow, so many songs...
-		                </p>
-                        <p id="tc-trackListMsg">Javascript needs to be enabled.</p>
-                        <p id="tc-trackList"></p>
-		                </p>
-	                </div>
-		</header>
+ 		</header>
 	</section>
 
 	<div class="introlower" id="tc-introlower">
@@ -74,7 +56,7 @@
 		</table>
 	</div>
 	
-
+	
     <br />
 
  	<div id="tc-footerblockbreak">
@@ -103,7 +85,7 @@
 	
 <script type="text/javascript" src="jquery-2.1.0.js"></script>
 <script type="text/javascript" src="sixistLibrary.js"></script>
-<script type="text/javascript" src="tracklistBody.js"></script>
+<script type="text/javascript" src="theairwaves-diary.js"></script>
 
 </body>
 </html>
