--- a/index.html
+++ b/index.html
@@ -18,98 +18,86 @@
 <body class="tc-index" id="css-tc-body">
 
 	<div class="intrologo" id="tc-intrologo">
-		<img src="theairwaves.jpg" alt="The Airwaves">
+		<img src="TheAirwavesLogoTopBanner.jpg" alt="The Airwaves">
+	</div>
+
+	<div class="introsidebar" id="tc-introsidebar">
+		<img src="TheAirwavesLogoSideFill.jpg" alt="The Airwaves">
 	</div>
 
  	<section class="intro" id="tc-intro" role="banner">
 		<header>
-    		<h1>The Airwaves</h1>
-	    	<h2>playing anything and everything</h2>
-            <h3>you request it, we'll play it.</h3>
+			<div class="navheader" id="tc-navheader">
+				<ul class="navmenu" id="tc-navmenu">
+					<li id="home"><a href="index.html"><b>Home</b></a></li>
+					<li id="diary"><a href="diary.html"><b>Diary</b></a></li>
+					<li id="tracklist"><a href="tracklist.html"><b>Track List</b></a></li>
+					<li id="history"><a href="contact.html"><b>Contact</b></a></li>
+				</ul>
+			</div>
+			<br/>
+			<br/>
+			<br/>
+			<p>
+			Formed in 2013, The Airwaves are rapidly building a big 
+			reputation as a premium function band.
+			</p>
+    		<p>
+			Hugely experienced musicians, the band are assembled from top bands 
+			such as The Motivators, Citizen Smith, 
+			<a href="http://brotherhoodsroundabout.co.uk/" class="links-name">Brotherhood's Roundabout</a> and 
+			<a href="http://retrolux.co.uk/" class="links-name">Retrolux</a>.
+			</p>
+    		<p>
+			Playing all the best party songs from past decades and bringing it 
+			bang up to date with recent chart material, The Airwaves cater
+			for any occasion.
+			</p>
 		</header>
 	</section>
 
+	<div class="introlower" id="tc-introlower">
+		<img src="TheAirwavesLowerBanner.jpg" alt="The Airwaves">
+	</div>
+
+	<div id="tc-bandmembers" role="article">
+		<table>
+			<tr>
+				<td>Ian Graham - Vox and Guitar</td>
+				<td>Chris Allen - Keyboards</td>
+				<td>Lee Dash - Drums</td>
+				<td>Ken Norman - Bass</td>
+			</tr>
+		</table>
+	</div>
+	
+	
    <br />
 
-    <div class="navheader" id="tc-navheader">
-		<ul class="navmenu" id="tc-navmenu">
-			<li id="home"><a href="index.html"><b>Home</b></a></li>
-			<li id="diary"><a href="diary.html"><b>Diary</b></a></li>
-			<li id="tracklist"><a href="tracklist.html"><b>Track List</b></a></li>
-			<li id="history"><a href="history.html"><b>History</b></a></li>
-		</ul>
+ 	<div id="tc-footerblockbreak">
+		<br />
+		<br />
+	</div>
 
-    </div>
+	<div id="tc-footerblockouter">
+		<div id="tc-footerblock" role="navigation">
+			<p>Contact: </p>
+			<a name="contact"></a>
+			<h3>Steve Allen Entertainments</h3>
+			<p>Post : The Coach House | 163 Broadway | Peterborough | PE1 4DH</p>
+			<p>Email : <a href="mailto:steve@sallenent.co.uk">steve@sallenent.co.uk</a></p>
+			<p>Tel : 01733 569589</p>
+			<p>Web : <a href="http://www.sallenent.co.uk">http://www.sallenent.co.uk</a></p>
+		</div>
+		<div class="infofooter" id="tc-infofooter" role="complementary">
+			<footer>
+				<a href="http://sixist.co.uk" title="Copyright (C) *sixist*, 2014" class="tc-footer-html">Created by *sixist*</a>
+			</footer>
+		</div>
+	</div>
 
-    <div class="column2" id="tc-column2">
-        <div class="column1" id="tc-column1">
-            <div class="info" id="tc-info">
-
-                <div class="infotext" id="tc-infotext" >
-  	                <div id="tc-infotext1" role="article">
-		                <h3>What sort of music do we play?</h3>
-		                <p>Anything and everything. If you want it, we'll play it. We already have an extensive set list, though, just in case you can't think of a killer track just now.</p>
-	                </div>
-
-	                <div id="tc-infotext2" role="article">
-		                <h3>Where can I see you play next?</h3>
-                        <p id="tc-pagemessage">Javascript needs to be enabled.</p>
-		                <p id="tc-nextevent"></p>
-	                </div>
-
-	                <div id="tc-infotext3" role="article">
-		                <h3>How can I book you for my venue/function/event?</h3>
-		                <p>Send an email to <a href="mailto:steve@sallenent.co.uk">steve@sallenent.co.uk</a>.</p>
-	                </div>
-
-	                <div id="tc-infotext4" role="article">
-		                <h3>Video and Audio Gallery</h3>
-
-                        <a id="video1" href="#">Video1</a>
-                        <a id="nojsvideo1" href="http://www.youtube.com/watch?v=54wezNzaH_k">Viva La Vida, by Coldplay, recorded live at the Swiss Cottage</a>
-                        <br />
-                        <br />
-
-	                </div>
-
-	                <div id="tc-infotext5" role="article">
-		                <h3>The Band</h3>
-		                Ian Graham - Vox and Guitar<br />
-		                Chris Allen - Keyboards<br />
-		                Ken Norman - Bass<br />
-		                Lee Dash - Drums<br />
-	                </div>
-                </div>
-                <br />
-
-	            <div class="infofooter" id="tc-infofooter" role="complementary">
-		            <footer>
-                        <a href="http://sixist.co.uk" title="Copyright (C) *sixist*, 2014" class="tc-footer-html">Created by *sixist*</a>
-		            </footer>
-                </div>
-            </div>
- 
-            <div class="sidebar" id="tc-sidebar">
-                <div class="links" id="tc-links" role="navigation">
-				    <h3>Links:</h3>
-				    <nav>
-					    <ul>
-					    <li>
-						    <a href="/220/" class="links-name"><a href="http://brotherhoodsroundabout.co.uk/" class="links-name">Brotherhood's Roundabout</a>
-					    </li>					
-					    <li>
-						    <a href="/220/" class="links-name"><a href="http://retrolux.co.uk/" class="links-name">Retrolux</a>
-					    </li>					
-					    </ul>
-				    </nav>
-			    </div>
-            </div>
-
-        </div>
-    </div>
-
-    <br />
-
+	
+	
 <script type="text/javascript" src="jquery-2.1.0.js"></script>
 <script type="text/javascript" src="sixistLibrary.js"></script>
 <script type="text/javascript" src="theairwaves-diary.js"></script>
