--- a/contact.html
+++ b/contact.html
@@ -31,13 +31,18 @@
 					<li id="home"><a href="index.html"><b>Home</b></a></li>
 					<li id="diary"><a href="diary.html"><b>Diary</b></a></li>
 					<li id="tracklist"><a href="tracklist.html"><b>Track List</b></a></li>
-					<li id="history"><a href="contact.html"><b>Contact</b></a></li>
+					<li id="contact"><a href="contact.html"><b>Contact</b></a></li>
 				</ul>
 			</div>
-			<br/>
-			<br/>
-			<br/>
-			<p>
+			<br/><br/><br/><br/>
+			<p/>
+			<div id="tc-infotext1" role="article">
+				<p>For more information and booking, please contact Steve Allen Entertainments.</p>
+				<p>The Coach House<br/>163 Broadway<br/>Peterborough<br/>PE1 4DH</p>
+				<p>Email : <a href="mailto:steve@sallenent.co.uk" class="links-name">steve@sallenent.co.uk</a></p>
+				<p>Tel : 01733 569589</p>
+				<p>Web : <a href="http://www.sallenent.co.uk" class="links-name">http://www.sallenent.co.uk</a></p>
+			</div>
  		</header>
 	</section>
 
