--- a/diary.html
+++ b/diary.html
@@ -31,12 +31,10 @@
 					<li id="home"><a href="index.html"><b>Home</b></a></li>
 					<li id="diary"><a href="diary.html"><b>Diary</b></a></li>
 					<li id="tracklist"><a href="tracklist.html"><b>Track List</b></a></li>
-					<li id="history"><a href="contact.html"><b>Contact</b></a></li>
+					<li id="contact"><a href="contact.html"><b>Contact</b></a></li>
 				</ul>
 			</div>
-			<br/>
-			<br/>
-			<br/>
+			<br/><br/><br/><br/>
 			<p>
                 <div class="infotext" id="tc-infotext" >
 
