--- a/tracklist.html
+++ b/tracklist.html
@@ -31,31 +31,28 @@
 					<li id="home"><a href="index.html"><b>Home</b></a></li>
 					<li id="diary"><a href="diary.html"><b>Diary</b></a></li>
 					<li id="tracklist"><a href="tracklist.html"><b>Track List</b></a></li>
-					<li id="history"><a href="contact.html"><b>Contact</b></a></li>
+					<li id="contact"><a href="contact.html"><b>Contact</b></a></li>
 				</ul>
 			</div>
-			<br/>
-			<br/>
-	                <div id="tc-infotext4" role="article">
-		                <h3>Video and Audio Gallery</h3>
+			<br/><br/><br/><br/>
+			<!--div id="tc-infotext4" role="article">
+				<h3>Video and Audio Gallery</h3>
 
-                        <a id="video1" href="#">Video1</a>
-                        <a id="nojsvideo1" href="http://www.youtube.com/watch?v=54wezNzaH_k">Viva La Vida, by Coldplay, recorded live at the Swiss Cottage</a>
-                        <br />
-                        <br />
+				<a id="video1" href="#">Video1</a>
+				<a id="nojsvideo1" href="http://www.youtube.com/watch?v=54wezNzaH_k">Viva La Vida, by Coldplay, recorded live at the Swiss Cottage</a>
+				<br />
+				<br />
 
-	                </div>
-			<br/>
-			<p>
-   	                <div id="tc-infotext1" role="article">
-		                <h3>Track list</h3>
-		                <p>
-                        This is a list of the songs that we could play at any point. Wow, so many songs...
-		                </p>
-                        <p id="tc-trackListMsg">Javascript needs to be enabled.</p>
-                        <p id="tc-trackList"></p>
-		                </p>
-	                </div>
+			</div-->
+			<p/>
+			<div id="tc-infotext1" role="article">
+				<p>
+				Choose your own music from our extensive range of material:
+				</p>
+				<p id="tc-trackListMsg">Javascript needs to be enabled.</p>
+				<select id="tc-trackList2" size="10"></select>
+				</p>
+			</div>
 		</header>
 	</section>
 
