--- a/index.html
+++ b/index.html
@@ -32,12 +32,10 @@
 					<li id="home"><a href="index.html"><b>Home</b></a></li>
 					<li id="diary"><a href="diary.html"><b>Diary</b></a></li>
 					<li id="tracklist"><a href="tracklist.html"><b>Track List</b></a></li>
-					<li id="history"><a href="contact.html"><b>Contact</b></a></li>
+					<li id="contact"><a href="contact.html"><b>Contact</b></a></li>
 				</ul>
 			</div>
-			<br/>
-			<br/>
-			<br/>
+			<br/><br/><br/><br/>
 			<p>
 			Formed in 2013, The Airwaves are rapidly building a big 
 			reputation as a premium function band.
@@ -45,8 +43,8 @@
     		<p>
 			Hugely experienced musicians, the band are assembled from top bands 
 			such as The Motivators, Citizen Smith, 
-			<a href="http://brotherhoodsroundabout.co.uk/" class="links-name">Brotherhood's Roundabout</a> and 
-			<a href="http://retrolux.co.uk/" class="links-name">Retrolux</a>.
+			<a href="http://www.brotherhoodsroundabout.co.uk/" class="links-name">Brotherhood's Roundabout</a> and 
+			<a href="http://www.retrolux.co.uk/" class="links-name">Retrolux</a>.
 			</p>
     		<p>
 			Playing all the best party songs from past decades and bringing it 
