--- a/index.html
+++ b/index.html
@@ -35,36 +35,38 @@
 					<li id="contact"><a href="contact.html"><b>Contact</b></a></li>
 				</ul>
 			</div>
-			<br/><br/><br/><br/>
-			<p>
-			Formed in 2013, The Airwaves are rapidly building a big 
-			reputation as a premium function band.
-			</p>
-    		<p>
-			Hugely experienced musicians, the band are assembled from top bands 
-			such as The Motivators, Citizen Smith, 
-			<a href="http://www.brotherhoodsroundabout.co.uk/" class="links-name">Brotherhood's Roundabout</a> and 
-			<a href="http://www.retrolux.co.uk/" class="links-name">Retrolux</a>.
-			</p>
-    		<p>
-			Playing all the best party songs from past decades and bringing it 
-			bang up to date with recent chart material, The Airwaves cater
-			for any occasion.
-			</p>
+			<p>&nbsp;</p>
+			<p>&nbsp;</p>
+			<div class="introtext" id="tc-introtext">
+				<p>
+				Formed in 2013, The Airwaves are rapidly building a big 
+				reputation as a premium function band.
+				</p>
+				<p>
+				Hugely experienced musicians, the band are assembled from top bands 
+				such as The Motivators, Citizen Smith, 
+				<a href="http://www.brotherhoodsroundabout.co.uk/" class="links-name">Brotherhood's Roundabout</a> and 
+				<a href="http://www.retrolux.co.uk/" class="links-name">Retrolux</a>.
+				</p>
+				<p>
+				Playing all the best party songs from past decades and bringing it 
+				bang up to date with recent chart material, The Airwaves cater
+				for any occasion.
+				</p>
+			</div>
 		</header>
 	</section>
-
 	<div class="introlower" id="tc-introlower">
 		<img src="TheAirwavesLowerBanner.jpg" alt="The Airwaves">
 	</div>
 
-	<div id="tc-bandmembers" role="article">
-		<table>
+	<div role="article">
+		<table id="tc-bandmembers">
 			<tr>
-				<td>Ian Graham - Vox and Guitar</td>
-				<td>Chris Allen - Keyboards</td>
-				<td>Lee Dash - Drums</td>
-				<td>Ken Norman - Bass</td>
+				<td>Ian Graham</td>
+				<td>Chris Allen</td>
+				<td>Lee Dash</td>
+				<td>Ken Norman</td>
 			</tr>
 		</table>
 	</div>
