--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="author" content="Ken Norman">
-	<meta name="description" content="The Airwaves, quality covers band Peterborough Cambridgeshire East Anglia Midlands.">
+	<meta name="description" content="The Airwaves, quality covers band Peterborough Cambridgeshire East Anglia Midlands. Weddings Parties Functions Corporate Events Musicians Covers">
 	<meta name="robots" content="all">
 
 </head>
@@ -21,41 +21,45 @@
 		<img src="TheAirwavesLogoTopBanner.jpg" alt="The Airwaves">
 	</div>
 
-	<div class="introsidebar" id="tc-introsidebar">
-		<img src="TheAirwavesLogoSideFill.jpg" alt="The Airwaves">
+	<div class="navheader" id="tc-navheader">
+		<ul class="navmenu" id="tc-navmenu">
+			<li id="home"><a href="index.html"><b>Home</b></a></li>
+			<li id="diary"><a href="diary.html"><b>Diary</b></a></li>
+			<li id="tracklist"><a href="tracklist.html"><b>Track List</b></a></li>
+			<li id="contact"><a href="contact.html"><b>Contact</b></a></li>
+		</ul>
 	</div>
-
- 	<section class="intro" id="tc-intro" role="banner">
+	
+	<section class="intro" id="tc-intro" role="banner">
 		<header>
-			<div class="navheader" id="tc-navheader">
-				<ul class="navmenu" id="tc-navmenu">
-					<li id="home"><a href="index.html"><b>Home</b></a></li>
-					<li id="diary"><a href="diary.html"><b>Diary</b></a></li>
-					<li id="tracklist"><a href="tracklist.html"><b>Track List</b></a></li>
-					<li id="contact"><a href="contact.html"><b>Contact</b></a></li>
-				</ul>
+			<p>&nbsp;</p>
+			<p>&nbsp;</p>
+			<div class="introsidebar" id="tc-introsidebar">
+				<img src="TheAirwavesLogoSideFill.jpg" alt="The Airwaves">
 			</div>
-			<p>&nbsp;</p>
-			<p>&nbsp;</p>
 			<div class="introtext" id="tc-introtext">
 				<p>
 				Formed in 2013, The Airwaves are rapidly building a big 
-				reputation as a premium function band.
+				reputation as a premium function band. 
 				</p>
 				<p>
 				Hugely experienced musicians, the band are assembled from top bands 
 				such as The Motivators, Citizen Smith, 
 				<a href="http://www.brotherhoodsroundabout.co.uk/" class="links-name">Brotherhood's Roundabout</a> and 
-				<a href="http://www.retrolux.co.uk/" class="links-name">Retrolux</a>.
+				<a href="http://www.retrolux.co.uk/" class="links-name">Retrolux</a>. 
 				</p>
 				<p>
 				Playing all the best party songs from past decades and bringing it 
 				bang up to date with recent chart material, The Airwaves cater
-				for any occasion.
+				for any occasion. We provide a multitude of benefits, including four part harmonies, 
+				a discreet P.A. and lighting system suitable for any venue, consummate 
+				professionalism and an iPOD connection to play background music between sets.
 				</p>
 			</div>
 		</header>
 	</section>
+ 
+
 	<div class="introlower" id="tc-introlower">
 		<img src="TheAirwavesLowerBanner.jpg" alt="The Airwaves">
 	</div>
@@ -70,7 +74,6 @@
 			</tr>
 		</table>
 	</div>
-	
 	
    <br />
 
