--- a/tracklist.html
+++ b/tracklist.html
@@ -9,7 +9,7 @@
 
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="author" content="Ken Norman">
-	<meta name="description" content="The Airwaves, quality covers band Peterborough Cambridgeshire East Anglia Midlands.">
+	<meta name="description" content="The Airwaves, quality covers band Peterborough Cambridgeshire East Anglia Midlands. Weddings Parties Functions Corporate Events Musicians Covers">
 	<meta name="robots" content="all">
 
 </head>
@@ -20,23 +20,21 @@
 		<img src="TheAirwavesLogoTopBanner.jpg" alt="The Airwaves">
 	</div>
 
-	<div class="introsidebar" id="tc-introsidebar">
-		<img src="TheAirwavesLogoSideFill.jpg" alt="The Airwaves">
+	<div class="navheader" id="tc-navheader">
+		<ul class="navmenu" id="tc-navmenu">
+			<li id="home"><a href="index.html"><b>Home</b></a></li>
+			<li id="diary"><a href="diary.html"><b>Diary</b></a></li>
+			<li id="tracklist"><a href="tracklist.html"><b>Track List</b></a></li>
+			<li id="contact"><a href="contact.html"><b>Contact</b></a></li>
+		</ul>
 	</div>
 
  	<section class="intro" id="tc-intro" role="banner">
 		<header>
-			<div class="navheader" id="tc-navheader">
-				<ul class="navmenu" id="tc-navmenu">
-					<li id="home"><a href="index.html"><b>Home</b></a></li>
-					<li id="diary"><a href="diary.html"><b>Diary</b></a></li>
-					<li id="tracklist"><a href="tracklist.html"><b>Track List</b></a></li>
-					<li id="contact"><a href="contact.html"><b>Contact</b></a></li>
-				</ul>
-			</div>
-			<br/><br/><br/><br/>
+			<p>&nbsp;</p>
+			<p>&nbsp;</p>
 			<!--div id="tc-infotext4" role="article">
-				<h3>Video and Audio Gallery</h3>
+				<h3>Video Gallery</h3>
 
 				<a id="video1" href="#">Video1</a>
 				<a id="nojsvideo1" href="http://www.youtube.com/watch?v=54wezNzaH_k">Viva La Vida, by Coldplay, recorded live at the Swiss Cottage</a>
@@ -44,10 +42,62 @@
 				<br />
 
 			</div-->
-			<p/>
+			<div class="introsidebar" id="tc-introsidebar">
+				<img src="TheAirwavesLogoSideFill.jpg" alt="The Airwaves">
+			</div>
+			<div id="tc-infoaudio" role="article">
+				Listen to a selection of musical tasters:
+				<br/>
+				<br/>
+				<a href="Music\01.mp3">Blurred Lines | Robin Thicke</a><br/>
+				<audio controls>
+				  <source src="Music\01.mp3" type="audio/mpeg">
+				  <!--source src="01.ogg" type="audio/ogg"-->
+				  <embed height="50" width="100" src="Music\01.mp3">
+				</audio>
+				<br/>
+				<a href="Music\02.mp3">Locked out of heaven | Bruno Marrs</a><br/>
+				<audio controls>
+				  <source src="Music\02.mp3" type="audio/mpeg">
+				  <embed height="50" width="100" src="Music\02.mp3">
+				</audio>
+				<br/>
+				<a href="Music\03.mp3">Rolling in the deep | Adele</a><br/>
+				<audio controls>
+				  <source src="Music\03.mp3" type="audio/mpeg">
+				  <embed height="50" width="100" src="Music\03.mp3">
+				</audio>
+				<br/>
+				<a href="Music\04.mp3">Hold back the night | Graham Parker</a><br/>
+				<audio controls>
+				  <source src="Music\04.mp3" type="audio/mpeg">
+				  <embed height="50" width="100" src="Music\04.mp3">
+				</audio>
+				<br/>
+				<a href="Music\05.mp3">Tracks of my tears | Smokey Robinson</a><br/>
+				<audio controls>
+				  <source src="Music\05.mp3" type="audio/mpeg">
+				  <embed height="50" width="100" src="Music\05.mp3">
+				</audio>
+				<br/>
+				<a href="Music\06.mp3">Everlasting love | Love Affair</a><br/>
+				<audio controls>
+				  <source src="Music\06.mp3" type="audio/mpeg">
+				  <embed height="50" width="100" src="Music\06.mp3">
+				</audio>
+				<br/>
+				<a href="Music\07.mp3">Come on Eileen | Dexy's Midnight Runners</a><br/>
+				<audio controls>
+				  <source src="Music\07.mp3" type="audio/mpeg">
+				  <embed height="50" width="100" src="Music\07.mp3">
+				</audio>
+				<br/>
+			</div>
+
 			<div id="tc-infotext1" role="article">
 				<p>
-				Choose your own music from our extensive range of material:
+				Choose your own music from our extensive range of material. If you don't see the 
+				track you would like here, don't worry, we are fast learners.
 				</p>
 				<p id="tc-trackListMsg">Javascript needs to be enabled.</p>
 				<select id="tc-trackList2" size="10"></select>
@@ -60,13 +110,13 @@
 		<img src="TheAirwavesLowerBanner.jpg" alt="The Airwaves">
 	</div>
 
-	<div id="tc-bandmembers" role="article">
-		<table>
+	<div role="article">
+		<table id="tc-bandmembers">
 			<tr>
-				<td>Ian Graham - Vox and Guitar</td>
-				<td>Chris Allen - Keyboards</td>
-				<td>Lee Dash - Drums</td>
-				<td>Ken Norman - Bass</td>
+				<td>Ian Graham</td>
+				<td>Chris Allen</td>
+				<td>Lee Dash</td>
+				<td>Ken Norman</td>
 			</tr>
 		</table>
 	</div>
