--- a/diary.html
+++ b/diary.html
@@ -9,7 +9,7 @@
 
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="author" content="Ken Norman">
-	<meta name="description" content="The Airwaves, quality covers band Peterborough Cambridgeshire East Anglia Midlands.">
+	<meta name="description" content="The Airwaves, quality covers band Peterborough Cambridgeshire East Anglia Midlands. Weddings Parties Functions Corporate Events Musicians Covers">
 	<meta name="robots" content="all">
 
 </head>
@@ -20,30 +20,30 @@
 		<img src="TheAirwavesLogoTopBanner.jpg" alt="The Airwaves">
 	</div>
 
-	<div class="introsidebar" id="tc-introsidebar">
-		<img src="TheAirwavesLogoSideFill.jpg" alt="The Airwaves">
+	<div class="navheader" id="tc-navheader">
+		<ul class="navmenu" id="tc-navmenu">
+			<li id="home"><a href="index.html"><b>Home</b></a></li>
+			<li id="diary"><a href="diary.html"><b>Diary</b></a></li>
+			<li id="tracklist"><a href="tracklist.html"><b>Track List</b></a></li>
+			<li id="contact"><a href="contact.html"><b>Contact</b></a></li>
+		</ul>
 	</div>
 
  	<section class="intro" id="tc-intro" role="banner">
 		<header>
-			<div class="navheader" id="tc-navheader">
-				<ul class="navmenu" id="tc-navmenu">
-					<li id="home"><a href="index.html"><b>Home</b></a></li>
-					<li id="diary"><a href="diary.html"><b>Diary</b></a></li>
-					<li id="tracklist"><a href="tracklist.html"><b>Track List</b></a></li>
-					<li id="contact"><a href="contact.html"><b>Contact</b></a></li>
-				</ul>
+			<p>&nbsp;</p>
+			<p>&nbsp;</p>
+			<div class="introsidebar" id="tc-introsidebar">
+				<img src="TheAirwavesLogoSideFill.jpg" alt="The Airwaves">
 			</div>
-			<br/><br/><br/><br/>
-			<p>
-                <div class="infotext" id="tc-infotext" >
+			<div class="infotext" id="tc-infotext" >
 
-	                <div id="tc-infotext1" role="article">
-		                <p/>
-                        <p id="tc-pagemessage">Javascript needs to be enabled.</p>
-		                <p id="tc-allevents"></p>
-	                </div>
-                </div>
+				<div id="tc-infotext1" role="article">
+					<p/>
+					<p id="tc-pagemessage">Javascript needs to be enabled.</p>
+					<p id="tc-allevents"></p>
+				</div>
+			</div>
 		</header>
 	</section>
 
@@ -51,13 +51,13 @@
 		<img src="TheAirwavesLowerBanner.jpg" alt="The Airwaves">
 	</div>
 
-	<div id="tc-bandmembers" role="article">
-		<table>
+	<div role="article">
+		<table id="tc-bandmembers">
 			<tr>
-				<td>Ian Graham - Vox and Guitar</td>
-				<td>Chris Allen - Keyboards</td>
-				<td>Lee Dash - Drums</td>
-				<td>Ken Norman - Bass</td>
+				<td>Ian Graham</td>
+				<td>Chris Allen</td>
+				<td>Lee Dash</td>
+				<td>Ken Norman</td>
 			</tr>
 		</table>
 	</div>
