--- a/tracklist.html
+++ b/tracklist.html
@@ -49,49 +49,51 @@
 				Listen to a selection of musical tasters:
 				<br/>
 				<br/>
+			</div>
+			<div id="tc-infoaudio" role="article">
 				<a href="Music\01.mp3">Blurred Lines | Robin Thicke</a><br/>
-				<audio controls>
+				<audio id="player" controls>
 				  <source src="Music\01.mp3" type="audio/mpeg">
 				  <!--source src="01.ogg" type="audio/ogg"-->
 				  <embed height="50" width="100" src="Music\01.mp3">
 				</audio>
-				<br/>
+				<br/><br/>
 				<a href="Music\02.mp3">Locked out of heaven | Bruno Marrs</a><br/>
-				<audio controls>
+				<audio id="player" controls>
 				  <source src="Music\02.mp3" type="audio/mpeg">
 				  <embed height="50" width="100" src="Music\02.mp3">
 				</audio>
-				<br/>
+				<br/><br/>
 				<a href="Music\03.mp3">Rolling in the deep | Adele</a><br/>
-				<audio controls>
+				<audio id="player" controls>
 				  <source src="Music\03.mp3" type="audio/mpeg">
 				  <embed height="50" width="100" src="Music\03.mp3">
 				</audio>
-				<br/>
+				<br/><br/>
 				<a href="Music\04.mp3">Hold back the night | Graham Parker</a><br/>
-				<audio controls>
+				<audio id="player" controls>
 				  <source src="Music\04.mp3" type="audio/mpeg">
 				  <embed height="50" width="100" src="Music\04.mp3">
 				</audio>
-				<br/>
+				<br/><br/>
 				<a href="Music\05.mp3">Tracks of my tears | Smokey Robinson</a><br/>
-				<audio controls>
+				<audio id="player" controls>
 				  <source src="Music\05.mp3" type="audio/mpeg">
 				  <embed height="50" width="100" src="Music\05.mp3">
 				</audio>
-				<br/>
+				<br/><br/>
 				<a href="Music\06.mp3">Everlasting love | Love Affair</a><br/>
-				<audio controls>
+				<audio id="player" controls>
 				  <source src="Music\06.mp3" type="audio/mpeg">
 				  <embed height="50" width="100" src="Music\06.mp3">
 				</audio>
-				<br/>
+				<br/><br/>
 				<a href="Music\07.mp3">Come on Eileen | Dexy's Midnight Runners</a><br/>
-				<audio controls>
+				<audio id="player" controls>
 				  <source src="Music\07.mp3" type="audio/mpeg">
 				  <embed height="50" width="100" src="Music\07.mp3">
 				</audio>
-				<br/>
+				<br/><br/>
 			</div>
 
 			<div id="tc-infotext1" role="article">
