OGG files, audio fixes, android select...

--- a/tracklist.html
+++ b/tracklist.html
@@ -54,44 +54,44 @@
 				<a href="Music\01.mp3">Blurred Lines | Robin Thicke</a><br/>
 				<audio id="player" controls>
 				  <source src="Music\01.mp3" type="audio/mpeg">
-				  <!--source src="01.ogg" type="audio/ogg"-->
-				  <embed height="50" width="100" src="Music\01.mp3">
+				  <source src="Music\01.ogg" type="audio/ogg">
+				  Your browser doesn't support html5 audio; click the song title to play or Rightclick-Save to download it.
 				</audio>
 				<br/><br/>
 				<a href="Music\02.mp3">Locked out of heaven | Bruno Marrs</a><br/>
 				<audio id="player" controls>
 				  <source src="Music\02.mp3" type="audio/mpeg">
-				  <embed height="50" width="100" src="Music\02.mp3">
+				  <source src="Music\02.ogg" type="audio/ogg">
 				</audio>
 				<br/><br/>
 				<a href="Music\03.mp3">Rolling in the deep | Adele</a><br/>
 				<audio id="player" controls>
 				  <source src="Music\03.mp3" type="audio/mpeg">
-				  <embed height="50" width="100" src="Music\03.mp3">
+				  <source src="Music\03.ogg" type="audio/ogg">
 				</audio>
 				<br/><br/>
 				<a href="Music\04.mp3">Hold back the night | Graham Parker</a><br/>
 				<audio id="player" controls>
 				  <source src="Music\04.mp3" type="audio/mpeg">
-				  <embed height="50" width="100" src="Music\04.mp3">
+				  <source src="Music\04.ogg" type="audio/ogg">
 				</audio>
 				<br/><br/>
 				<a href="Music\05.mp3">Tracks of my tears | Smokey Robinson</a><br/>
 				<audio id="player" controls>
 				  <source src="Music\05.mp3" type="audio/mpeg">
-				  <embed height="50" width="100" src="Music\05.mp3">
+				  <source src="Music\05.ogg" type="audio/ogg">
 				</audio>
 				<br/><br/>
 				<a href="Music\06.mp3">Everlasting love | Love Affair</a><br/>
 				<audio id="player" controls>
 				  <source src="Music\06.mp3" type="audio/mpeg">
-				  <embed height="50" width="100" src="Music\06.mp3">
+				  <source src="Music\06.ogg" type="audio/ogg">
 				</audio>
 				<br/><br/>
 				<a href="Music\07.mp3">Come on Eileen | Dexy's Midnight Runners</a><br/>
 				<audio id="player" controls>
 				  <source src="Music\07.mp3" type="audio/mpeg">
-				  <embed height="50" width="100" src="Music\07.mp3">
+				  <source src="Music\07.ogg" type="audio/ogg">
 				</audio>
 				<br/><br/>
 			</div>
@@ -102,7 +102,7 @@
 				track you would like here, don't worry, we are fast learners.
 				</p>
 				<p id="tc-trackListMsg">Javascript needs to be enabled.</p>
-				<select id="tc-trackList2" size="10"></select>
+				<select id="tc-trackList2"></select>
 				</p>
 			</div>
 		</header>
