--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<meta name="author" content="Ken Norman">
 	<meta name="description" content="The Airwaves, quality covers band Peterborough Cambridgeshire East Anglia Midlands. Weddings Parties Functions Corporate Events Musicians Covers">
 	<meta name="robots" content="all">
-
+	<meta name="google-site-verification" content="VpuwX9I2Y4WGInNwHnpfDBQYo2YMrxMNmH8uTpbC2WM" />
 </head>
 
 
