--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="author" content="Ken Norman">
-	<meta name="description" content="The Airwaves, quality covers band Peterborough Cambridgeshire East Anglia Midlands. Weddings Parties Functions Corporate Events Musicians Covers">
+	<meta name="description" content="The Airwaves, quality function band covering Peterborough, Cambridgeshire, East Anglia, Midlands and beyond. Available for Weddings, Parties, Events, Private Functions, Corporate Functions.">
+	<meta name="keywords" content="The Airwaves, covers band, Peterborough, Cambridgeshire, East Anglia, Midlands, Weddings, Wedding Band, Parties, Party Band, Functions, Function Band, Corporate, Events, Musicians, Covers">
 	<meta name="robots" content="all">
 	<meta name="google-site-verification" content="VpuwX9I2Y4WGInNwHnpfDBQYo2YMrxMNmH8uTpbC2WM" />
 </head>
