Hide Diary page

--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
 	<div class="navheader" id="tc-navheader">
 		<ul class="navmenu" id="tc-navmenu">
 			<li id="home"><a href="index.html"><b>Home</b></a></li>
-			<li id="diary"><a href="diary.html"><b>Diary</b></a></li>
-			<li id="tracklist"><a href="tracklist.html"><b>Track List</b></a></li>
+			<!--li id="diary"><a href="diary.html"><b>Diary</b></a></li-->
+			<li id="tracklist"><a href="tracklist.html"><b>Music</b></a></li>
 			<li id="contact"><a href="contact.html"><b>Contact</b></a></li>
 		</ul>
 	</div>
