--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
 <body class="tc-index" id="css-tc-body">
 
 	<div class="intrologo" id="tc-intrologo">
-		<img src="TheAirwavesLogoTopBanner.jpg" alt="The Airwaves">
+	<center>
+		<img src="TheAirwavesLogo.jpg" alt="The Airwaves">
+	</center>
 	</div>
 
 	<div class="navheader" id="tc-navheader">
