--- a/tracklist.html
+++ b/tracklist.html
@@ -17,7 +17,9 @@
 <body class="tc-tracklist" id="css-tc-body">
 
 	<div class="intrologo" id="tc-intrologo">
-		<img src="TheAirwavesLogoTopBanner.jpg" alt="The Airwaves">
+	<center>
+		<img src="TheAirwavesLogo.jpg" alt="The Airwaves">
+	</center>
 	</div>
 
 	<div class="navheader" id="tc-navheader">
